ecmascript/parser/tests/test262-error-references/fail/85bb33accf520f1d.js.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/test262-parser/fail/85bb33accf520f1d.js:2:1
  |
2 | ]
  | ^

